css/flickr.css
#page #main-wrapper #flickrgallery #flickrgallery-albums {
	display: flex;
	justify-content: center;
	flex-flow: row wrap;
	align-content: stretch;
}

#flickrgallery-albums {
	margin: 0 auto;
	max-width: 980px;
}

.flickr-album {
	position: relative;
	width: 195px;
	height: 195px;
	margin: 20px;

	background-size: cover;
	background-repeat: no-repeat;
}

.flickr-overlay {
	display: block;
	height: 100%;
	background: linear-gradient(0deg,rgba(0,0,0,.9) 0,transparent 50%,transparent);
	color: white;
}

.flickr-overlay:hover {
	color: rgb(185, 185, 185);
}

.flickr-title {
	position: absolute;
	bottom: 20px;
	margin: 0 20px;
	text-shadow: 0 1px 1px #000;
	font-size: 18px;
	font-weight: 400;
	line-height: 20px;
}

